--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ force-https: True
 lang: "en"
 author: "Koen Bal"
 title: "{ Koen Bal }"
-description: "Website of John Smith. Opinions expressed are mine."
+description: "Website of Koen Bal. Opinions expressed are mine."
 keywords: "bal, Koen, personal, website"
 favicon: "/img/favicon.ico"
 
@@ -136,11 +136,17 @@ syntax-highlight: True
 
 events:
   - image: "/img/timeline/spidertocat.png"
-    date: "September 2013 - Today"
-    description: "Saving the neighborhood!"
+    date: "Sep 2009 - Jun 2012"
+    description: "MSc Mechanical Engineering, MSc Business Economics - Finance"
+  - image: "/img/timeline/spidertocat.png"
+    date: "Jan 2013 - Sep 2017"
+    description: "Freelance Data Visualization Consultant"
   - image: "/img/timeline/baracktocat.jpg"
-    date: "September 2017 - August 2018"
-    description: "Created a cross-exchange market maker trading engine"
+    date: "Mar 2018 - Nov 2019"
+    description: "Built a proprietary cross-exchange market making trading engine"
+  - image: "/img/timeline/baracktocat.jpg"
+    date: "Sept 2019 - Today"
+    description: "Freelance Data Engineer"
 
 # First image of the Timeline
 
@@ -160,7 +166,7 @@ email: "koen.bal@gmail.com"
 # This works best when your author blurb image has a transparent background, or matches your site background color.
 
 # if the author_blurb is not set, then this feature is skipped
-author_blurb: "Koen Bal is a builder. He lives in Flatland, where he works on two-dimensional engineering projects. In his spare time, John likes to eat cotton candy."
+author_blurb: "Koen Bal is a system builder. He lives in Europe, where he works on challenging engineering projects. In his spare time, Koen likes to eat pancakes."
 author_blurb_image: "/img/Looking up Colors - narrow circle - size 100x100.png"
 
 ##################
@@ -168,16 +174,16 @@ author_blurb_image: "/img/Looking up Colors - narrow circle - size 100x100.png"
 ##################
 
 social:
-  - title: "facebook"
-    url: "https://facebook.com/"
+  # - title: "facebook"
+  #   url: "https://facebook.com/"
   - title: "twitter"
-    url: "https://twitter.com/"
+    url: "https://twitter.com/balkoen"
   - title: "github"
-    url: "https://github.com/PanosSakkos/personal-jekyll-theme"
-  - title: "bitcoin"
-    url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
-  - title: "rss"
-    url: "/feed.xml"
+    url: "https://github.com/koenbal/"
+  # - title: "bitcoin"
+  #   url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
+  # - title: "rss"
+  #   url: "/feed.xml"
 
 ############
 # 404 page #
