--- a/_config.yml
+++ b/_config.yml
@@ -208,7 +208,7 @@ pages_list:
   About: 'about'
   # Blog: 'latest-post'
   Timeline: 'timeline'
-  Tools: 'tools'
+  Skills: 'skills'
   Contact: 'contact'
 
 # Exclusion list from the generated _site
