--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ baseurl:                    # when using github pages with a custom domain
   
 # Google tracking id
 
-google-tracking-id: ""
+google-tracking-id: "UA-154989443-1"
 
 # Forces https everywhere in your website, except when you serve it locally
 # If you are not hosted on Github Pages, and your host doesn't support https
