new timeline start

--- a/_config.yml
+++ b/_config.yml
@@ -186,7 +186,7 @@ events:
 
 # First image of the Timeline
 
-timeline-img: "/img/Looking up Colors - narrow circle - size medium.png"
+timeline-img: "/img/timeline/met_bal_3.jpg"
 
 ###########
 # Contact #
